<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Lab_1_Task_1</string>
    <string name="name_label">Imię</string>
    <string name="name_hint">Wpisz imię</string>
    <string name="last_name_label">Nazwisko</string>
    <string name="last_name_hint">Wpisz nazwisko</string>
    <string name="marks_label">Wpisz liczbę ocen (5–15)</string>
    <string name="maks_hint">Liczba ocen</string>
    <string name="button_text">Oceny</string>
</resources>